force-app/main/default/objects/Commitment_Milestone__c/Commitment_Milestone__c.object-meta.xml
<CustomObject>
    <description>Timed milestone within a Commitment Process. Whiteboard: Milestones.</description>
    <label>Commitment Milestone</label>
    <nameField>
        <label>Milestone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commitment Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>