force-app/main/default/objects/Commitment_Milestone__c/fields/Commitment_Process__c.field-meta.xml
<CustomField>
    <fullName>Commitment_Process__c</fullName>
    <label>Commitment Process</label>
    <referenceTo>Commitment_Process__c</referenceTo>
    <relationshipLabel>Commitment Milestones</relationshipLabel>
    <relationshipName>Commitment_Milestones</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>