force-app/main/default/objects/Commitment_Milestone__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <label>Sequence</label>
    <precision>3</precision>
    <scale>0</scale>
    <required>true</required>
    <type>Number</type>
</CustomField>