force-app/main/default/objects/Commitment_Milestone__c/fields/Target_Hours__c.field-meta.xml
<CustomField>
    <fullName>Target_Hours__c</fullName>
    <label>Target Hours</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>