force-app/main/default/objects/Commitment_Milestone__c/validationRules/Completed_Requires_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Completed_Requires_Date</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status__c, "Completed") &amp;&amp; ISBLANK(Completed_Date__c)</errorConditionFormula>
    <errorDisplayField>Completed_Date__c</errorDisplayField>
    <errorMessage>Completed Date is required when Status is Completed.</errorMessage>
</ValidationRule>